Replace iframe with direct link and update index.html for better embedded video compatibility

--- a/index.html
+++ b/index.html
@@ -57,7 +57,21 @@
                 </a>
             </div>
 
-            <!-- Add more link containers as needed -->
+            <!-- Example embedded video container -->
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <div class="relative pb-9/16">
+                    <iframe 
+                        src="https://www.udio.com/embed/8ivWt3H2YQcRnbWeYwioux?embedVariant=alternate&utm_source=generator"
+                        class="absolute top-0 left-0 w-full h-full border-none rounded-md"
+                        frameborder="0"
+                        loading="lazy"
+                        allowfullscreen
+                        title="Embedded Video"
+                    ></iframe>
+                </div>
+            </div>
+
+            <!-- Add more link or video containers as needed -->
         </div>
     </main>
 
