--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <footer class="bg-primary text-white py-4 mt-auto">
         <div class="container mx-auto px-4 md:px-6 lg:px-8 text-center">
-            <p class="text-sm">© 2025 Your Name</p>
+            <p class="text-sm">© 2025 yetistudio.space</p>
         </div>
     </footer>
 </body>
