--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         default-src 'self' https: cdn.tailwindcss.com;
         style-src 'self' https: cdn.tailwindcss.com 'unsafe-inline';
         script-src 'self' https: cdn.tailwindcss.com;
+        frame-src 'self' https://www.udio.com;
+        img-src 'self' https:;
     ">
     
     <!-- Favicon setup -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 </head>
 
 <body class="min-h-screen bg-secondary text-primary font-sans">
@@ -30,14 +32,16 @@
     <main class="container mx-auto px-4 md:px-6 lg:px-8 py-8">
         <div class="grid gap-8 md:gap-12">
             <div class="bg-white rounded-lg shadow-md p-6">
-                <iframe 
-                    src="https://www.udio.com/embed/8ivWt3H2YQcRnbWeYwioux?embedVariant=alternate&utm_source=generator"
+                <!-- Native video implementation -->
+                <video 
                     class="w-full aspect-video border-none rounded-md"
-                    frameborder="0"
-                    loading="lazy"
-                    allowfullscreen
-                    title="Audio Embed"
-                ></iframe>
+                    controls
+                    preload="metadata"
+                    poster="video-thumbnail.jpg"
+                >
+                    <source src="https://www.udio.com/embed/8ivWt3H2YQcRnbWeYwioux" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
             </div>
         </div>
     </main>
